sdk/go/auto/test/errors/compilation_error/go/go.mod
module compilation_error

go 1.14

require github.com/pulumi/pulumi/sdk/v2 v2.20.0
